<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- AndroidManifest - Activity Name -->
    <string name="label_app_name" translatable="false">Thoth News</string>
    <string name="label_activity_new_view">New View Activity</string>
    <string name="label_activity_preferences">Settings</string>
    <string name="label_activity_classes">Your Thoth Classes</string>

    <!-- layout: layout_classes_list -->
    <string name="title_classes_view">Your Classes</string>
    <string name="classes_loading_error">There was a problem loading your classes .\nCheck your connection!</string>

    <!-- layout: layout_news_list -->
    <string name="title_news_view" translatable="false">Your_Classes_News</string>
    <string name="news_loading_error">There was a problem loading the news list.\nCheck your connection!</string>

    <!-- layout: fragment_single_new -->
    <string name="label_news_view">Your Classes News</string>

    <!-- layout: item_class -->
    <string name="class_item_id" translatable="false">class_item_id</string>
    <string name="class_item_full_name" translatable="false">class_item_full_name</string>
    <string name="class_item_teacher" translatable="false">class_item_teacher</string>

    <!-- layout: item_new -->
    <string name="new_item_when" translatable="false">new_item_when</string>
    <string name="new_item_title" translatable="false">new_item_title</string>
    <string name="new_item_class_name" translatable="false">new_item_class_name</string>

    <!-- layout: fragment_single_new -->
    <string name="new_view_when"></string>
    <string name="new_view_title"></string>
    <string name="new_view_content"></string>

    <!-- layout: item_class_selection -->
    <string name="class_item_when" translatable="false">class_item_when</string>
    <string name="class_item_title" translatable="false">class_item_title</string>
    <string name="classes_pick_cancel">Selection was canceled!</string>
    <string name="classes_pick_ok">Selection saved with success!</string>

    <!-- menu: main & new_view -->
    <string name="title_action_settings">Settings</string>

    <!-- xml: preferences -->
    <string name="category_classes_title">Classes</string>
    <string name="thoth_classes_title">Classes List</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_action_refresh">Refresh All</string>
    <string name="clean_classes_title">Clear enrollments</string>
    <string name="clean_classes_warning">Careful!! You will lose all the previous preferences stored!</string>
    <string name="dialog_ok" translatable="false">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="clean_classes_toast">Your selection has been cleaned!</string>
    <string name="thoth_connection_failed_toast">Thoth connection failed!</string>
    <string name="get_news_success_toast">Last news updated with success!</string>
    <string name="get_news_fail_toast">Last news update failed!</string>
    <string name="request_select_class_toast">Please select one class at least!</string>
    <string name="notification_txt">Notification text</string>
    <string name="title_activity_class_pick">Select your classes</string>
    <string name="classes_pick_loading_error">There was a problem loading the classes list.\n Check your connection!</string>
    <string name="discard">Discard</string>
    <string name="save">Save</string>
    <string name="dummy_section_text" translatable="false">Section %1d is just a dummy section.</string>
    <string name="tab_news">News</string>
    <string name="tab_participants">Participants</string>
    <string name="label_class_section_view">Your Class</string>
    <string name="empty_text">List is empty! Swipe down to refresh.</string>
    <string name="item_class_lbl">Class:</string>
    <string name="item_teacher_lbl">Regent:</string>
    <string name="participant_item_full_name" translatable="false">participant_item_full_name</string>
    <string name="participant_item_email" translatable="false">participant_item_email</string>
    <string name="participant_item_number_and_group" translatable="false">participant_item_number_and_group</string>
    <string name="participant_main_info_tv">, Group:</string>
    <string name="tv_teacher_email" translatable="false">tv_teacher_email</string>
    <string name="tv_teacher_name" translatable="false">tv_teacher_name</string>
    <string name="tv_class_name" translatable="false">tv_class_name</string>
    <string name="toast_wait_message">This Process may take a few seconds.\nPlease wait!</string>
    <string name="news_read_all_title">Mark all news as read</string>
    <string name="news_read_all_warning">You really want to mark all news from this class as read??</string>
    <string name="news_read_all_toast_success">Your news was been marked as read with success!</string>
    <string name="news_read_all_toast_fail">Some unexpected error.\nYour news could not been update!</string>
    <string name="service_update_classes_success">Classes Updated with Success!!</string>
    <string name="service_update_classes_error">Some error occur on updating your classes!</string>
    <string name="send_email_subject">Subject of email</string>
    <string name="send_mail_to">"Send mail to "</string>
    <string name="send_mail_fail_no_app">There are no email clients installed.</string>
    <string name="send_email_body">Body</string>
    <string name="setup_classes_request">Setup the classes you are enrolled!</string>
    <string name="toast_no_connectivity">Please check your wifi connection!</string>
    <string name="not_students_assigned">This Class doesn\'t have students assign!</string>
    <string name="no_class_news">This Class doesn\'t have news created!</string>
    <string name="category_notifications_title">Notifications</string>
    <string name="category_connectivity_title">Connectivity</string>
    <string name="vibration_switch_key" translatable="false">vibration_switch_key</string>
    <string name="pick_classes_key" translatable="false">pick_classes_key</string>
    <string name="data_mobile_switch_key" translatable="false">data_mobile_switch_key</string>
    <string name="title_action_clear_all">Clear selections</string>
    <string name="thoth_semesters_title">Semesters</string>
    <string name="thoth_semesters_summary">Please select the semesters your want to filter.</string>
    <string name="thoth_classes_summary_no_semester">Please choose at least one semester!</string>
    <string name="thoth_classes_summary">Please choose at least one classe!</string>
    <string name="title_action_web_view" translatable="false" />
    <string name="thoth_classes_summary_enrolled"> classes enrolled.</string>
    <string name="item_workItem_title" translatable="false">item_workItem_title</string>
    <string name="item_workItem_whenStart" translatable="false">item_workItem_whenStart</string>
    <string name="item_workItem_whenDue" translatable="false">item_workItem_whenDue</string>
    <string name="item_workItem_url" translatable="false">item_workItem_url</string>
    <string name="tab_work_items">Work Items</string>
    <string name="teacher_label"><![CDATA[<small>Regent:</small>]]>" "</string>
    <string name="start_date_label"><![CDATA[<small>Start Date:</small>]]></string>
    <string name="due_date_label"><![CDATA[<small>Due Date:</small>]]></string>
    <string name="create_date_label"><![CDATA[<small>Create Date:</small>]]></string>
    <string name="data_mobile_switch_title">Data Mobile</string>
    <string name="vibration_switch_title" translatable="false">Vibration</string>
    <string name="auto_add_events_switch_key" translatable="false">auto_add_events_switch_key</string>
    <string name="category_calendar_title">Calendar</string>
    <string name="auto_add_events_title">Events</string>
    <string name="auto_add_events_summary">Automatically add events</string>
</resources>
