<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="preference_key">

    <PreferenceCategory
        android:title="@string/category_classes_title"
        android:key="classes_category">
        <MultiSelectListPreference
            android:key="multi_select_list_key"
            android:title="@string/thoth_semesters_title"
            android:summary="@string/thoth_semesters_summary"
            android:defaultValue="@array/empty_array"
            android:entryValues="@array/empty_array"
            android:entries="@array/empty_array"
            />
        <Preference
            android:key="@string/pick_classes_key"
            android:title="@string/title_activity_class_pick"
            android:summary="" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/category_notifications_title"
        android:key="notification_category_key">
        <SwitchPreference
            android:key="@string/vibration_switch_key"
            android:icon="@drawable/ic_notification_vibration"
            android:title="@string/vibration_switch_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/category_connectivity_title"
        android:key="notification_category_key">
        <SwitchPreference
            android:key="@string/data_mobile_switch_key"
            android:title="@string/data_mobile_switch_title"
            android:icon="@drawable/ic_sim_data_mobile"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/category_calendar_title"
        android:key="calendar_events_category_key">
        <SwitchPreference
            android:key="@string/auto_add_events_switch_key"
            android:title="@string/auto_add_events_title"
            android:summary="@string/auto_add_events_summary"
            android:icon="@drawable/ic_action_event"/>
    </PreferenceCategory>

</PreferenceScreen>