<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_centerVertical="true">
    <TextView
        android:id="@+id/item_workItem_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_centerVertical="true">
        <TextView
            android:id="@+id/item_workItem_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_workItem_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="40dp"/>

        <TextView
            android:id="@+id/item_workItem_whenStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_workItem_whenStart"
            android:textSize="15sp"
            android:textColor="#444444"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"/>
        <TextView
            android:id="@+id/item_workItem_whenDue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_workItem_whenDue"
            android:textSize="15sp"
            android:textColor="#444444"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"/>
        <TextView
            android:id="@+id/item_workItem_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_workItem_url"
            android:visibility="gone"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/iv_workitem_webview"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_webview"/>
</RelativeLayout>