<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/new_view_when"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_view_when"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:textSize="14sp"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/new_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_view_title"
        android:layout_below="@id/new_view_when"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingBottom="@dimen/activity_vertical_margin"/>

    <View
        android:id="@+id/divisor"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#000000"
        android:layout_below="@+id/new_view_title"/>

    <TextView
        android:id="@+id/new_view_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_view_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:scrollbars="vertical"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:fadeScrollbars="true"
        android:layout_below="@id/divisor"
        android:autoLink="web"
        android:textSize="14sp"
    />

</RelativeLayout>