<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pt.isel.pdm.grupo17.thothnews.activities.ClassesSelectionActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    >
    <ProgressBar
        android:id="@+id/classes_progress"
        style="@android:style/Widget.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        />
    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/classes_loading_error"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        />

    <ListView
        android:id="@+id/classesList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttomBtns"
        />

    <LinearLayout style="?android:buttonBarStyle"
        android:id="@+id/buttomBtns"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        >

        <Button style="?android:buttonBarButtonStyle"
            android:id="@+id/BtnDiscard"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/discard"
        />
        <Button style="?android:buttonBarButtonStyle"
            android:id="@+id/BtnSave"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/save"
        />

    </LinearLayout>
</RelativeLayout>
